[package]
name = "spacetime-module"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
spacetimedb = "1.2.0"
log = "0.4"
rubox = { path = "../../rubox" }
# tracing = { version = "0.1", features = ["max_level_debug", "release_max_level_info"] }
sha2 = "0.10"


[logs]
level = "debug"
directives = [
    "spacetimedb=debug",
    "spacetimedb_standalone=info",
]
